# Sieglinde_gripper_control

./: Dockerfile  README.md  docker-compose.yaml  start.sh  test.py
Code/: ArduinoMegaCode.ino
docker/: README.md  docker-compose.yaml
docker/Test/: Dockerfile
docker/client/: Dockerfile
docker/master/: Dockerfile
sieglinde_gripper_control/: CMakeLists.txt  package.xml
sieglinde_gripper_control/launch/: controller.launch
sieglinde_gripper_control/msg/: SetCurrent.msg
sieglinde_gripper_control/src/: control.cpp
src/: ArduinoMegaCode.ino  README.md
